--- a/TemperatureControllerExercise/pom.xml
+++ b/TemperatureControllerExercise/pom.xml
@@ -22,6 +22,12 @@
       <version>5.6.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-params</artifactId>
+    <version>5.6.0</version>
+    <scope>test</scope>
+</dependency>
 	<dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
