--- a/VendingMachineExercise/pom.xml
+++ b/VendingMachineExercise/pom.xml
@@ -27,6 +27,25 @@
       <artifactId>mockito-core</artifactId>
       <version>3.3.0</version>
     </dependency>
+  
+  <dependency>
+	    <groupId>io.cucumber</groupId>
+	   	  <artifactId>cucumber-java8</artifactId>
+	      <version>5.6.0</version>
+	   	  <scope>test</scope>
+	  </dependency> 	
+	  <dependency>
+        <groupId>io.cucumber</groupId>
+        <artifactId>cucumber-junit</artifactId>
+        <version>5.1.3</version>
+       	<scope>test</scope>
+      </dependency>         
+    <dependency>
+      <groupId>org.junit.vintage</groupId>
+      <artifactId>junit-vintage-engine</artifactId>
+      <version>5.6.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies> 
   <build>
     <plugins>
