--- a/RoverExercise/pom.xml
+++ b/RoverExercise/pom.xml
@@ -22,46 +22,29 @@
       <version>5.6.0</version>
       <scope>test</scope>
     </dependency>
-	<dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>3.3.0</version>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>5.6.0</version>
+      <scope>test</scope>
     </dependency>    
-    <dependency>
-	  <groupId>org.assertj</groupId>
-	  <artifactId>assertj-core</artifactId>
-	  <version>3.15.0</version>
-	  <scope>test</scope>
-	</dependency>
-	<dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <version>5.6.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.6.0</version>
-      <scope>test</scope>
-    </dependency>
 	<dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>3.3.0</version>
-    </dependency>  
+    </dependency>  	
     <dependency>
 	  <groupId>io.cucumber</groupId>
-	    <artifactId>cucumber-java8</artifactId>
-	    <version>5.6.0</version>
-	   	<scope>test</scope>
-	  </dependency> 	
-	  <dependency>
-        <groupId>io.cucumber</groupId>
-        <artifactId>cucumber-junit</artifactId>
-        <version>5.1.3</version>
-       	<scope>test</scope>
-      </dependency>         
+	  <artifactId>cucumber-java8</artifactId>
+	  <version>5.6.0</version>
+	  <scope>test</scope>
+	</dependency> 	
+	<dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-junit</artifactId>
+      <version>5.1.3</version>
+      <scope>test</scope>
+    </dependency>         
     <dependency>
       <groupId>org.junit.vintage</groupId>
       <artifactId>junit-vintage-engine</artifactId>
