--- a/VendingMachineExercise/pom.xml
+++ b/VendingMachineExercise/pom.xml
@@ -27,13 +27,18 @@
       <artifactId>mockito-core</artifactId>
       <version>3.3.0</version>
     </dependency>
-  
-  <dependency>
-	    <groupId>io.cucumber</groupId>
-	   	  <artifactId>cucumber-java8</artifactId>
-	      <version>5.6.0</version>
-	   	  <scope>test</scope>
-	  </dependency> 	
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>5.6.0</version>
+      <scope>test</scope>
+    </dependency>  
+    <dependency>
+	  <groupId>io.cucumber</groupId>
+	  <artifactId>cucumber-java8</artifactId>
+	  <version>5.6.0</version>
+	  <scope>test</scope>
+	</dependency> 	
 	  <dependency>
         <groupId>io.cucumber</groupId>
         <artifactId>cucumber-junit</artifactId>
